Replace iTerm2 to WezTerm

--- a/Rime/squirrel.custom.yaml
+++ b/Rime/squirrel.custom.yaml
@@ -3,7 +3,7 @@ patch:
   app_options/+:
     com.apple.Spotlight:
       ascii_mode: true    # 开启默认英文
-    com.googlecode.iterm2:
+    com.github.wez.wezterm:
       ascii_mode: true
     com.apple.dt.Xcode:
       ascii_mode: true
